# spandrel

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TENSOR_SHAPE_REFERENCE.md  dump.yml  export_and_test.py  pip-dev.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  vscode.env
libs/spandrel/: pyproject.toml
libs/spandrel/spandrel/: __init__.py
libs/spandrel/spandrel/__helpers/: canonicalize.py  main_registry.py  model_descriptor.py  registry.py
libs/spandrel/spandrel/architectures/ATD/: __init__.py
libs/spandrel/spandrel/architectures/ATD/__arch/: atd_arch.py
libs/spandrel/spandrel/architectures/ATD/arch/: atd_arch.py
libs/spandrel/spandrel/architectures/AuraSR/: __init__.py
libs/spandrel/spandrel/architectures/AuraSR/__arch/: aura_sr.py
libs/spandrel/spandrel/architectures/CAIN/: __init__.py
libs/spandrel/spandrel/architectures/CAIN/arch/: cain.py  cain_encdec.py  cain_noca.py  common.py
libs/spandrel/spandrel/architectures/CRAFT/: __init__.py
libs/spandrel/spandrel/architectures/CRAFT/arch/: CRAFT.py
libs/spandrel/spandrel/architectures/Compact/: __init__.py
libs/spandrel/spandrel/architectures/Compact/arch/: SRVGG.py
libs/spandrel/spandrel/architectures/DAT/: __init__.py
libs/spandrel/spandrel/architectures/DAT/__arch/: DAT.py
libs/spandrel/spandrel/architectures/DAT/arch/: DAT.py
libs/spandrel/spandrel/architectures/DCTLSA/: __init__.py
libs/spandrel/spandrel/architectures/DCTLSA/__arch/: dctlsa.py
libs/spandrel/spandrel/architectures/DITN/: __init__.py
libs/spandrel/spandrel/architectures/DPIR/: __init__.py
libs/spandrel/spandrel/architectures/DPIR/arch/: basicblock.py  network_dncnn.py  network_unet.py
libs/spandrel/spandrel/architectures/DRCT/: __init__.py
libs/spandrel/spandrel/architectures/DRCT/__arch/: drct_arch.py
libs/spandrel/spandrel/architectures/DRCT/arch/: drct_arch.py
libs/spandrel/spandrel/architectures/DRUNet/: __init__.py
libs/spandrel/spandrel/architectures/DRUNet/__arch/: network_unet.py
libs/spandrel/spandrel/architectures/DRUNet/arch/: network_unet.py
libs/spandrel/spandrel/architectures/DnCNN/: __init__.py
libs/spandrel/spandrel/architectures/DnCNN/__arch/: network_dncnn.py
libs/spandrel/spandrel/architectures/DnCNN/arch/: network_dncnn.py
libs/spandrel/spandrel/architectures/ESRGAN/: __init__.py
libs/spandrel/spandrel/architectures/ESRGAN/__arch/: RRDB.py
libs/spandrel/spandrel/architectures/ESRGAN/arch/: RRDB.py
libs/spandrel/spandrel/architectures/FBCNN/: __init__.py
libs/spandrel/spandrel/architectures/FDAT/: __init__.py
libs/spandrel/spandrel/architectures/FFTformer/: __init__.py
libs/spandrel/spandrel/architectures/FLAVR/: __init__.py
libs/spandrel/spandrel/architectures/GFPGAN/: __init__.py
libs/spandrel/spandrel/architectures/GRL/: __init__.py
libs/spandrel/spandrel/architectures/HAT/: __init__.py
libs/spandrel/spandrel/architectures/HVICIDNet/: __init__.py
libs/spandrel/spandrel/architectures/IPT/: __init__.py
libs/spandrel/spandrel/architectures/KBNet/: __init__.py
libs/spandrel/spandrel/architectures/LHAN/: __init__.py
libs/spandrel/spandrel/architectures/LUDVAE/: __init__.py
libs/spandrel/spandrel/architectures/LaMa/: __init__.py
libs/spandrel/spandrel/architectures/MMRealSR/: __init__.py
libs/spandrel/spandrel/architectures/MixDehazeNet/: __init__.py
libs/spandrel/spandrel/architectures/MoESR/: __init__.py
libs/spandrel/spandrel/architectures/MoSR/: __init__.py
libs/spandrel/spandrel/architectures/NAFNet/: __init__.py
libs/spandrel/spandrel/architectures/OmniSR/: __init__.py
libs/spandrel/spandrel/architectures/PLKSR/: __init__.py
libs/spandrel/spandrel/architectures/RCAN/: __init__.py
libs/spandrel/spandrel/architectures/RGT/: __init__.py
libs/spandrel/spandrel/architectures/RTMoSR/: __init__.py
libs/spandrel/spandrel/architectures/RealCUGAN/: __init__.py
libs/spandrel/spandrel/architectures/RestoreFormer/: __init__.py
libs/spandrel/spandrel/architectures/RetinexFormer/: __init__.py
libs/spandrel/spandrel/architectures/SAFMN/: __init__.py
libs/spandrel/spandrel/architectures/SAFMNBCIE/: __init__.py
libs/spandrel/spandrel/architectures/SCUNet/: __init__.py
libs/spandrel/spandrel/architectures/SPAN/: __init__.py
libs/spandrel/spandrel/architectures/SPANPlus/: __init__.py
libs/spandrel/spandrel/architectures/Sebica/: __init__.py
libs/spandrel/spandrel/architectures/SwiftSRGAN/: __init__.py
libs/spandrel/spandrel/architectures/Swin2SR/: __init__.py
libs/spandrel/spandrel/architectures/SwinIR/: __init__.py
libs/spandrel/spandrel/architectures/USRNet/: __init__.py
libs/spandrel/spandrel/architectures/Uformer/: __init__.py
libs/spandrel/spandrel/architectures/__arch_helpers/: dynamic_conv.py  dysample.py
libs/spandrel/spandrel/architectures/sudo_SPANPlus/: __init__.py
libs/spandrel/spandrel/util/: __init__.py
libs/spandrel_extra_arches/: README.md  pyproject.toml
libs/spandrel_extra_arches/spandrel_extra_arches/: __helper.py  __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/AdaCode/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/CodeFormer/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/DDColor/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/FeMaSR/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/M3SNet/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/MAT/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/MIRNet2/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/MPRNet/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/Restormer/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/SRFormer/: __init__.py
libs/spandrel_extra_arches/spandrel_extra_arches/architectures/VRT/: __init__.py
(+386 files in other folders)
