[build-system]
requires = ["setuptools>=46.4.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "spandrel"
authors = [{ name = "chaiNNer team" }]
description = "Give your project support for a variety of PyTorch model architectures, including auto-detecting model architecture from just .pth files. spandrel gives you arch support."
readme = "README.md"
requires-python = ">=3.8,<3.12"
keywords = [
    "spandrel",
    "pytorch architecture",
    "pytorch arch",
    "model arch",
    "model architecture",
]
license = { text = "GPLv3" }
classifiers = [
    # see https://pypi.org/classifiers/
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["torch", "torchvision", "safetensors", "numpy", "einops"]
dynamic = ["version"]

[project.optional-dependencies]
build = ["setuptools>=46.4.0", "wheel", "build", "twine"]
lint = ["ruff==0.1.6"]
typecheck = ["pyright==1.1.335"]
test = ["pytest==7.4.0", "syrupy==4.6.0", "opencv-python==4.8.1.78"]

# [tool.setuptools.dynamic]
# version = { attr = "spandrel.VERSION" }

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

src = ["src"]

# ignore vendored code
# extend-exclude = ["src/architectures/**"]

extend-select = [
    "UP",     # pyupgrade
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "FA",     # flake8-future-annotations
    "N",      # pep8-naming
    "ANN001",
    "ANN002",
]
ignore = [
    "E501", # Line too long
    "N999", # Invalid module name
    "N814", # Camelcase imported as constant
]

[tool.ruff.lint.per-file-ignores]
"**/arch/**/*" = ["N", "ANN"]
"**/__arch_helpers/**/*" = ["N", "ANN"]
"**/tests/**/*" = ["N802"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
